# ClassAlert

./: pyproject.toml
.github/workflows/: main.yml
src/: flet_alarm.py  main.py  tst.py
